# Raves_Rating

./: index.html  package-lock.json  package.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migration/src/: lib.rs  m20241108_010513_create_artists.rs  m20241108_011153_create_locations.rs  m20241108_011410_create_rating.rs  m20241108_011927_create_raves.rs  m20241108_013020_create_expenses.rs  m20241109_224247_create_rave_artists.rs  m20241109_224816_create_expenses_rave_fk.rs
src-tauri/migration/src/entities/: artists.rs  expenses.rs  locations.rs  ratings.rs  rave_artist.rs  raves.rs
src-tauri/models/: Cargo.toml
src-tauri/models/src/entities/: expenses.rs  mod.rs  prelude.rs  raves.rs
src-tauri/src/: config.rs  lib.rs  main.rs  utils.rs
src-tauri/src/types/: artists.rs  expenses.rs  locations.rs  mod.rs  ratings.rs  rave_artists.rs  raves.rs
src/components/: AddArtistModal.css  AddArtistModal.tsx  AddExpense.css  AddExpenseModal.tsx  DeleteModal.css  DeleteModal.tsx  Footer.css  Footer.tsx  RaveCard.css  RaveCard.tsx  SeeAllLink.css  SeeAllLink.tsx
src/lib/: deleteArtist.ts  deleteExpense.ts  deleteRave.ts  deleteRaveArtistRelation.ts  getAllArtists.ts  getAllLocations.ts  getAllRatings.ts  getAllRaves.ts  getArtistDetail.ts  getPreviousRaves.ts  getRaveDetail.ts  getUpcomingRaves.ts  patchRaveDetail.ts  postArtist.ts  postExpense.ts  postRaveArtistRelation.ts  postRaveDetail.ts
src/pages/: Add.css  Add.tsx  AddArtist.tsx  AddRave.css  AddRave.tsx  ArtistDetail.css  ArtistDetail.tsx  EditArtist.css  EditArtist.tsx  (+7 more)
(+10 files in other folders)
