[package]
name = "raves_rating"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[workspace]
members = ["migration", "models"]

[lib]
name = "raves_rating_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
models = { path = "./models" }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15.7"
sea-orm = { version = "1.1.0", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-time",
    "with-json",
    "with-uuid",
] }
once_cell = "1.20.2"
tokio = { version = "1.41.1", features = ["sync", "macros", "rt-multi-thread"] }
chrono = "0.4.38"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sea-orm = { version = "1.1.0", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-time",
    "with-json",
    "with-uuid",
] }
